# SAGisXPlanung

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  deploy.ps1  generate_migrations.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update.sh
.github/workflows/: main.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0a6f00a1f663_v1_9_0.py  151ba21532e3_v2_6_0.py  1983d6b6e2c1_v2_4_0.py  1a015621a38f_v1_7_0.py  20238c1f2cf8_v2_5_0.py  20c50b38b0af_v1_3_1.py  2cee32cfc646_v1_4_0.py  346f4a91caf3_v2_3_0.py  54455ce1e9f6_v1_5_0.py  5b93f2301608_v2_7_0.py  812b33dce3d1_v1_8_0.py  873e18b73036_v1_6_0.py  8cdbef1a55d6_v2_1_0.py  b93ec8372df6_v1_10_0.py  ce95b86bc010_v2_2_0.py  cfbf4d3b2a9d_v1_3_0.py  fb27f7a59e17_v2_0_0.py
build_env/: Dockerfile  qgis_install.ps1
docs/: UPDATE.md  mkdocs.yml
docs/docs/: add-plancontent.md  index.md  map-display.md  multi-edit.md  new-plan.md  plan-export.md  plan-import.md
installer/: build.yaml  setup.iss  test.yaml
src/SAGisXPlanung/: BuildingTemplateItem.py  ConverterTasks.py  Settings.py  (+8 more)
tests/: ContextMenuTool_test.py  ConverterTask_test.py  GMLReader_test.py  GMLWriter_test.py  IdentifyFeatureTool_test.py  MapLayerRegistry_test.py  QExplorerView_test.py  QFeatureIdentify_test.py  QXPlanTab_test.py  XPPlanDetailsDialog_test.py  XPlanungDialog_test.py  XPlanungPlugin_test.py  attribute_edit_test.py  context_menu_tool_actions_test.py  fp_test.py  geometry_test.py  input_widget_test.py  palette_test.py  renderer_test.py  run_tests.py  test_attributes.py  test_editor_widget.py  test_mixins.py
(+207 files in other folders)
