[metadata]
name = SAGis XPlanung
version = 2.2.0
author = NTI Deutschland GmbH
author_email = qgis-de@nti.biz
description = QGIS-Plugin zur XPlanung-konformen Erfassung und Verwaltung von Bauleitplänen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nti-de/SAGisXPlanung/
project_urls =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src